<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="action_settings">Settings</string>
    <string name="action_undo">Undo</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Join the numbers and get to the 2048 tile!</string>
    <string name="new_game"> New Game </string>
    <string name="score">SCORE</string>
    <string name="bestScore">BEST</string>
    <string name="how_to_play">\@zhangkc</string>
    <string name="action_auto">Auto</string>
    <string name="action_tips">Tips</string>
</resources>
