<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>


    <item
            android:id="@+id/action_undo"
            android:orderInCategory="200"
            android:showAsAction="never"
            android:title="@string/action_undo"/>


    <item
            android:id="@+id/action_tips"
            android:orderInCategory="300"
            android:showAsAction="never"
            android:title="@string/action_tips"/>

    <item
            android:id="@+id/action_auto"
            android:orderInCategory="400"
            android:showAsAction="never"
            android:title="@string/action_auto"/>

</menu>
