<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            <TextView
                    android:textSize="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:focusableInTouchMode="true"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right|center_vertical"
                >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/tv_score"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal|center_vertical"
                        android:textColor="@color/cardTextColorLvGt8"
                        android:text="@string/score"/>
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/score"
                        android:textColor="@color/cardTextColorLvGt8"
                        android:gravity="center_horizontal|center_vertical"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:background="@drawable/tv_score"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal|top"
                        android:textColor="@color/cardTextColorLvGt8"
                        android:text="@string/bestScore"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/bestScore"
                        android:textColor="@color/cardTextColorLvGt8"
                        android:gravity="center_horizontal|center_vertical"/>
            </LinearLayout>
         </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">
            <TextView
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/description"
                    android:autoText="true"
                    android:gravity="center_vertical|left"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal|right">
            <Button
                android:id="@+id/newGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardTextColorLvGt8"
                android:text="@string/new_game"
                android:background="@drawable/radiusButton"></Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">
        <com.example.game2048.GameView
                android:id="@+id/gameView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">
        </com.example.game2048.GameView>
    </LinearLayout>
</LinearLayout>